--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ data/raw_data/rural_urban_arrests.csv
 outputs/findings/01_map_2010.html
 outputs/findings/02_map_2015.html
 outputs/findings/02_map_2015.Rmd
+scripts/analysis/02_spreadsheet_maker.R
+
 
 # .ds_store
 .DS_Store
